--- a/articulos.html
+++ b/articulos.html
@@ -35,8 +35,8 @@
         <div class="main2">
             <div class="grid1B"> 
                 <figure>
-                    <img src="../Leticia/Resources/Images/pinturacampo.jpg" width="100%" height="auto"
-                        alt="Enamorados caminando juntos en un campo de flores rojas">
+                    <img src="../Leticia V2/Resources/Images/pinturacampo.jpg" width="100%" height="auto"
+                        alt="Pintura con 2 enamorados caminando juntos en un campo de flores rojas">
                     <figcaption><em>&copy;desconocido</em></figcaption>
                 </figure>  
             </div>
@@ -74,7 +74,7 @@
             </div>
             <div class="grid4B">
                 <figure>
-                    <img src="../Leticia/Resources/Images/serenidad.jpg" width="70%" height="auto"
+                    <img src="../Leticia V2/Resources/Images/serenidad.jpg" width="70%" height="auto"
                         alt="Arbol y escaleras de piedras, Serenidad">
                     <figcaption><em>&copy;Fotos : Jeremy Bishop ; Rachael 🫧 - en Unsplash</em></figcaption>
                 </figure>  
