--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="grid3">
                     <figure>
-                    <img src="../Leticia/Resources/Images/girasol.jpg" width="95%" height="auto" alt="un gran arbol"><figcaption><em>&copy;Foto de Paul Green en Unsplash</em></figcaption>
+                    <img src="../Leticia V2/Resources/Images/girasol.jpg" width="95%" height="auto" alt="Imagen de girasol"><figcaption><em>&copy;Foto de Paul Green en Unsplash</em></figcaption>
                    </figure>
                    <aside><em>"Lo mejor esta por venir.<br>Confia !"</em></aside>
                 </div>
@@ -56,10 +56,10 @@
                     </h2>
                     <p>En mi consultorio, ubicado en la colonia Loma Verde - SLP, le garantiza profesionalismo y confidencialidad.</p>
                     <p>La relacion con el terapeuta es muy importante en el exito de la terapia, y el medio juga su role en eso, para poder confiarse en confianza y tranquilidad.</p>
-                    <img src="../Leticia/Resources/Images/piedras.jpg" style="width:20%" height="auto" alt="Piedras apiladas"><figcaption><em>&copy;Foto de Ben White en Unsplash</em></figcaption>
+                    <img src="../Leticia V2/Resources/Images/piedras.jpg"  style="width:20%" height="auto" alt="Piedras apiladas"><figcaption><em>&copy;Foto de Ben White en Unsplash</em></figcaption>
                 </div>
                 <div class="grid5">
-                    <img src="../Leticia/Resources/Images/Fuente_San Luis Potosi, SLP.jpg" style="width:90%" height="auto" alt="Fuente en el Centro historico de San Luis Potosi, SLP"><figcaption>Centro Historico de San Luis Potosi, SLP</figcaption>
+                    <img src="../Leticia V2/Resources/Images/Fuente_San Luis Potosi, SLP.jpg" style="width:90%" height="auto" alt="Fuente en el Centro historico de San Luis Potosi, SLP"><figcaption>Centro Historico de San Luis Potosi, SLP</figcaption>
                 </div>
                 <div class="grid6">
                     <h3 class="address" id="contacto">Teléfono</h3>
