--- a/terapia.html
+++ b/terapia.html
@@ -58,14 +58,14 @@
             </div>
             <div class="grid2A">
                 <figure>
-                    <img src="../Leticia/Resources/Images/varios_problemas.jpg" width="100%" height="auto"
+                    <img src="../Leticia V2/Resources/Images/varios_problemas.jpg" width="100%" height="auto"
                         alt="Depresion, Adicciones, Problemas deParejas">
                     <figcaption><em>&copy;Fotos : Stormseeker ; Anthony Tan ; Gabriel ; Afif Ramdhasuma - en Unsplash</em></figcaption>
                 </figure>
             </div>
             <div class="grid3A">
                 <figure>
-                    <img src="../Leticia/Resources/Images/felicidad.jpg" width="80%" height="auto"
+                    <img src="../Leticia V2/Resources/Images/felicidad.jpg" width="80%" height="auto"
                         alt="Imajes positivas y de felicidad">
                     <figcaption><em>&copy;Fotos : Laercio Cavalcanti ; Phạm Chung 🇻🇳 ; unknown ; Ben White - en Unsplash</em></figcaption>
                 </figure>
