--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
                 <title>Psicológa Leticia Silva Anguiano SLP"</title>
                 <meta charset="utf-8">
-                <link href="../Leticia V2/Resources/style.css" rel="stylesheet">
+                <link href="../Leticia_V2/Resources/style.css" rel="stylesheet">
                 <link rel="preconnect" href="https://fonts.googleapis.com">
                 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
                 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
         <main>
             <div class="main">
                 <div class="grid1">
-                    <img id="index" src="../Leticia/Resources/Images/fotodeperfil2.png" width="95%" height="auto" alt="Dra. Leticia SILVA ANGUIANO">    
+                    <img id="index" src="../Leticia_V2/Resources/Images/fotodeperfil2.png" width="95%" height="auto" alt="Dra. Leticia SILVA ANGUIANO">    
                     <h1>Psicológa</h1>
                     <h2>Psicoanalista</h2>
                     <i class="fa-solid fa-user-doctor"></i>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="grid3">
                     <figure>
-                    <img src="../Leticia V2/Resources/Images/girasol.jpg" width="95%" height="auto" alt="Imagen de girasol"><figcaption><em>&copy;Foto de Paul Green en Unsplash</em></figcaption>
+                    <img src="../Leticia_V2/Resources/Images/girasol.jpg" width="95%" height="auto" alt="Imagen de girasol"><figcaption><em>&copy;Foto de Paul Green en Unsplash</em></figcaption>
                    </figure>
                    <aside><em>"Lo mejor esta por venir.<br>Confia !"</em></aside>
                 </div>
@@ -56,10 +56,10 @@
                     </h2>
                     <p>En mi consultorio, ubicado en la colonia Loma Verde - SLP, le garantiza profesionalismo y confidencialidad.</p>
                     <p>La relacion con el terapeuta es muy importante en el exito de la terapia, y el medio juga su role en eso, para poder confiarse en confianza y tranquilidad.</p>
-                    <img src="../Leticia V2/Resources/Images/piedras.jpg"  style="width:20%" height="auto" alt="Piedras apiladas"><figcaption><em>&copy;Foto de Ben White en Unsplash</em></figcaption>
+                    <img src="../Leticia_V2/Resources/Images/piedras.jpg"  style="width:20%" height="auto" alt="Piedras apiladas"><figcaption><em>&copy;Foto de Ben White en Unsplash</em></figcaption>
                 </div>
                 <div class="grid5">
-                    <img src="../Leticia V2/Resources/Images/Fuente_San Luis Potosi, SLP.jpg" style="width:90%" height="auto" alt="Fuente en el Centro historico de San Luis Potosi, SLP"><figcaption>Centro Historico de San Luis Potosi, SLP</figcaption>
+                    <img src="../Leticia_V2/Resources/Images/Fuente_San Luis Potosi, SLP.jpg" style="width:90%" height="auto" alt="Fuente en el Centro historico de San Luis Potosi, SLP"><figcaption>Centro Historico de San Luis Potosi, SLP</figcaption>
                 </div>
                 <div class="grid6">
                     <h3 class="address" id="contacto">Teléfono</h3>
