--- a/terapia.html
+++ b/terapia.html
@@ -4,7 +4,7 @@
 <head>
     <title>Psicológa Leticia Silva Anguiano SLP"</title>
     <meta charset="utf-8">
-    <link href="../Leticia V2/Resources/style.css" rel="stylesheet">
+    <link href="../Leticia_V2/Resources/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
@@ -58,14 +58,14 @@
             </div>
             <div class="grid2A">
                 <figure>
-                    <img src="../Leticia V2/Resources/Images/varios_problemas.jpg" width="100%" height="auto"
+                    <img src="../Leticia_V2/Resources/Images/varios_problemas.jpg" width="100%" height="auto"
                         alt="Depresion, Adicciones, Problemas deParejas">
                     <figcaption><em>&copy;Fotos : Stormseeker ; Anthony Tan ; Gabriel ; Afif Ramdhasuma - en Unsplash</em></figcaption>
                 </figure>
             </div>
             <div class="grid3A">
                 <figure>
-                    <img src="../Leticia V2/Resources/Images/felicidad.jpg" width="80%" height="auto"
+                    <img src="../Leticia_V2/Resources/Images/felicidad.jpg" width="80%" height="auto"
                         alt="Imajes positivas y de felicidad">
                     <figcaption><em>&copy;Fotos : Laercio Cavalcanti ; Phạm Chung 🇻🇳 ; unknown ; Ben White - en Unsplash</em></figcaption>
                 </figure>
