--- a/articulos.html
+++ b/articulos.html
@@ -4,7 +4,7 @@
 <head>
     <title>Psicológa Leticia Silva Anguiano SLP"</title>
     <meta charset="utf-8">
-    <link href="../Leticia V2/Resources/style.css" rel="stylesheet">
+    <link href="../Leticia_V2/Resources/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
@@ -35,7 +35,7 @@
         <div class="main2">
             <div class="grid1B"> 
                 <figure>
-                    <img src="../Leticia V2/Resources/Images/pinturacampo.jpg" width="100%" height="auto"
+                    <img src="../Leticia_V2/Resources/Images/pinturacampo.jpg" width="100%" height="auto"
                         alt="Pintura con 2 enamorados caminando juntos en un campo de flores rojas">
                     <figcaption><em>&copy;desconocido</em></figcaption>
                 </figure>  
@@ -74,7 +74,7 @@
             </div>
             <div class="grid4B">
                 <figure>
-                    <img src="../Leticia V2/Resources/Images/serenidad.jpg" width="70%" height="auto"
+                    <img src="../Leticia_V2/Resources/Images/serenidad.jpg" width="70%" height="auto"
                         alt="Arbol y escaleras de piedras, Serenidad">
                     <figcaption><em>&copy;Fotos : Jeremy Bishop ; Rachael 🫧 - en Unsplash</em></figcaption>
                 </figure>  
